Fixed wrap class

--- a/public/scss/components/_headings.scss
+++ b/public/scss/components/_headings.scss
@@ -6,6 +6,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 // Adding this class will wrap words if they are too long
-wrap {
+.wrap {
     word-wrap: break-word;
 }
